Made changes to selectors. Will need to make another selector choice for home page. This was done to fix the layout issues but also if the layout was to be switched in the future, it will be easier to do individual pages

--- a/css/screen.css
+++ b/css/screen.css
@@ -303,55 +303,57 @@ audio {
     padding-right: 8.33333333%; /* 70/840 */
   }
 
-  /* This layout is for the pages hockey and home */
-  #primary {
+  /* This layout is for the hockey page */
+  #hockey #hockey-primary {
     width: 64.285714%; /* 450/700 */
     float: left;
   }
 
-  #supporting {
+  #hockey #hockey-supporting {
     width: 28.571429%; /* 200/700 */
     margin-left: 7.142857%; /* 50/700 */
     float: left;
   }
 
-  #footer {
+  #hockey #hockey-footer {
     clear: both;
   }
 
-  .flexbox #primary,
-  .flexbox #supporting {
+  .flexbox #hockey #hockey-primary,
+  .flexbox #hockey #hockey-supporting {
     float: none;
     margin-left: 0;
     flex: 0 1 auto;
   }
 
-  .flexbox #content {
+  .flexbox #hockey #hockey-content {
     display: flex;
     justify-content: space-between;
   }
 
-  .cssgrid #content {
+  .cssgrid #hockey #hockey-content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto auto;
     grid-column-gap: 25px;
   }
 
-  .cssgrid #primary,
-  .cssgrid #supporting {
+  .cssgrid #hockey #hockey-primary,
+  .cssgrid #hockey #hockey-supporting {
     width: auto;
   }
 
-  .cssgrid #primary {
+  .cssgrid #hockey #hockey-primary {
     grid-column: 1 / 3;
     grid-row: 1;
   }
 
-  .cssgrid #supporting {
+  .cssgrid #hockey #hockey-supporting {
     grid-column: 3;
     grid-row: 2;
   }
+
+
 
   /*This layout is for the resume page*/
   #resume #supporting {
